--- a/portfolio.html
+++ b/portfolio.html
@@ -10,188 +10,230 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/syles.css" />
   </head>
   <body>
     <!--header-->
     <header class="header">
-      <nav class="header-navigation">
-        <a class="header-logo link" href="./portfolio.html"
-          >Web<span class="header-logo-part">Studio</span></a
-        >
-        <ul class="header-menu-list list">
-          <li class="header-menu-item">
-            <a class="header-menu-link link" href="./index.html" target="_blank">Studio</a>
-          </li>
-          <li class="header-menu-item">
-            <a class="header-menu-link link" href="./portfolio.html" target="_blank"
-              >Portfolio</a
+      <div class="container heaer-container">
+        <nav class="header-navigation">
+          <div class="header-logo-all">
+            <a class="header-logo link" href="./portfolio.html"
+              >Web<span class="header-logo-part">Studio</span></a
             >
-          </li>
-          <li class="header-menu-item">
-            <a class="header-menu-link link" href="" target="_blank"
-              >Contacts</a
-            >
-          </li>
-        </ul>
-      </nav>
-      <address class="adress-header-section">
-        <ul class="header-adress-list list">
-          <li>
-            <a class="header-menu-adress link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="header-menu-adress link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+          </div>
+          <ul class="header-menu-list list">
+            <li class="header-menu-item">
+              <a
+                class="header-menu-link link"
+                href="./index.html"
+                target="_blank"
+                >Studio</a
+              >
+            </li>
+            <li class="header-menu-item">
+              <a
+                class="header-menu-link link"
+                href="./portfolio.html"
+                target="_blank"
+                >Portfolio</a
+              >
+            </li>
+            <li class="header-menu-item">
+              <a class="header-menu-link link" href="" target="_blank"
+                >Contacts</a
+              >
+            </li>
+          </ul>
+        </nav>
+        <address class="adress-header-section">
+          <ul class="header-adress-list list">
+            <li>
+              <a
+                class="header-menu-adress link"
+                href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="header-menu-adress link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <!--section 1-->
       <section class="servicies">
-        <h1 hidden class="main-section-title">filter-buttons</h1>
-        <ul class="section-button-list list">
-          <li class="button-item">
-            <button class="button-all" type="button">All</button>
-          </li>
-          <li class="button-item">
-            <button class="button-all" type="button">Web Site</button>
-          </li>
-          <li class="button-item">
-            <button class="button-all" type="button">App</button>
-          </li>
-          <li class="button-item">
-            <button class="button-all" type="button">Design</button>
-          </li>
-          <li class="button-item">
-            <button class="button-all" type="button">Marketing</button>
-          </li>
-        </ul>
-        <ul class="servicies-list list">
-          <li class="servicies-item">
-            <a class="servicies-item-link link" href="">
-              <img
-                src="./images/serv-img-1.jpg"
-                width="360"
-                height="360"
-                alt="Banking App"
-              />
-              <h2 class="servicies-title">Banking App Interface Concept</h2>
-              <p class="servicies-type">App</p>
-            </a>
-          </li>
-          <li>
-            <a class="servicies-item-link link" href="">
-              <img
-                src="./images/serv-img-2.jpg"
-                width="360"
-                height="360"
-                alt="Cashless Payment"
-              />
-              <h2 class="servicies-title">Cashless Payment</h2>
-              <p class="servicies-type">Marketing</p>
-            </a>
-          </li>
-          <li>
-            <a class="servicies-item-link link" href="">
-              <img
-                src="./images/serv-img-3.jpg"
-                width="360"
-                height="360"
-                alt="Meditation App"
-              />
-              <h2 class="servicies-title">Meditation App</h2>
-              <p class="servicies-type">App</p>
-            </a>
-          </li>
-          <li>
-            <a class="servicies-item-link link" href="">
-              <img
-                src="./images/serv-img-4.jpg"
-                width="360"
-                height="360"
-                alt="Taxi Service"
-              />
-              <h2 class="servicies-title">Taxi Service</h2>
-              <p class="servicies-type">Marketing</p>
-            </a>
-          </li>
-          <li>
-            <a class="servicies-item-link link" href="">
-              <img
-                src="./images/serv-img-5.jpg"
-                width="360"
-                height="360"
-                alt="Screen Illustrations"
-              />
-              <h2 class="servicies-title">Screen Illustrations</h2>
-              <p class="servicies-type">Design</p>
-            </a>
-          </li>
-          <li>
-            <a class="servicies-item-link link" href="">
-              <img
-                src="./images/serv-img-6.jpg"
-                width="360"
-                height="360"
-                alt="Online Courses"
-              />
-              <h2 class="servicies-title">Online Courses</h2>
-              <p class="servicies-type">Marketing</p>
-            </a>
-          </li>
-          <li>
-            <a class="servicies-item-link link" href="">
-              <img
-                src="./images/serv-img-7.jpg"
-                width="360"
-                height="360"
-                alt="Instagram Stories Concept"
-              />
-              <h2 class="servicies-title">Instagram Stories Concept</h2>
-              <p class="servicies-type">Design</p>
-            </a>
-          </li>
-          <li>
-            <a class="servicies-item-link link" href="">
-              <img
-                src="./images/serv-img-8.jpg"
-                width="360"
-                height="360"
-                alt="Organic Food"
-              />
-              <h2 class="servicies-title">Organic Food</h2>
-              <p class="servicies-type">Web Site</p>
-            </a>
-          </li>
-          <li>
-            <a class="servicies-item-link link" href="">
-              <img
-                src="./images/serv-img-9.jpg"
-                width="360"
-                height="360"
-                alt="Organic Food"
-              />
-              <h2 class="servicies-title">Fresh Coffee</h2>
-              <p class="servicies-type">Web Site</p>
-            </a>
-          </li>
-        </ul>
+        <div class="container">
+          <h1 class="visually-hidden">filter-buttons</h1>
+          <ul class="section-button-list list">
+            <li class="button-item">
+              <button class="button-all" type="button">All</button>
+            </li>
+            <li class="button-item">
+              <button class="button-all" type="button">Web Site</button>
+            </li>
+            <li class="button-item">
+              <button class="button-all" type="button">App</button>
+            </li>
+            <li class="button-item">
+              <button class="button-all" type="button">Design</button>
+            </li>
+            <li class="button-item">
+              <button class="button-all" type="button">Marketing</button>
+            </li>
+          </ul>
+          <ul class="servicies-list list">
+            <li class="servicies-item">
+              <a class="servicies-item-link link" href="">
+                <img
+                  src="./images/serv-img-1.jpg"
+                  width="360"
+                  height="300"
+                  alt="Banking App"
+                />
+                <div class="container-servicies">
+                  <h2 class="servicies-title">Banking App Interface Concept</h2>
+                  <p class="servicies-type">App</p>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a class="servicies-item-link link" href="">
+                <img
+                  src="./images/serv-img-2.jpg"
+                  width="360"
+                  height="300"
+                  alt="Cashless Payment"
+                />
+                <div class="container-servicies">
+                  <h2 class="servicies-title">Cashless Payment</h2>
+                  <p class="servicies-type">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a class="servicies-item-link link" href="">
+                <img
+                  src="./images/serv-img-3.jpg"
+                  width="360"
+                  height="300"
+                  alt="Meditation App"
+                />
+                <div class="container-servicies">
+                  <h2 class="servicies-title">Meditation App</h2>
+                  <p class="servicies-type">App</p>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a class="servicies-item-link link" href="">
+                <img
+                  src="./images/serv-img-4.jpg"
+                  width="360"
+                  height="300"
+                  alt="Taxi Service"
+                />
+                <div class="container-servicies">
+                  <h2 class="servicies-title">Taxi Service</h2>
+                  <p class="servicies-type">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a class="servicies-item-link link" href="">
+                <img
+                  src="./images/serv-img-5.jpg"
+                  width="360"
+                  height="300"
+                  alt="Screen Illustrations"
+                />
+                <div class="container-servicies">
+                  <h2 class="servicies-title">Screen Illustrations</h2>
+                  <p class="servicies-type">Design</p>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a class="servicies-item-link link" href="">
+                <img
+                  src="./images/serv-img-6.jpg"
+                  width="360"
+                  height="300"
+                  alt="Online Courses"
+                />
+                <div class="container-servicies">
+                  <h2 class="servicies-title">Online Courses</h2>
+                  <p class="servicies-type">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a class="servicies-item-link link" href="">
+                <img
+                  src="./images/serv-img-7.jpg"
+                  width="360"
+                  height="300"
+                  alt="Instagram Stories Concept"
+                />
+                <div class="container-servicies">
+                  <h2 class="servicies-title">Instagram Stories Concept</h2>
+                  <p class="servicies-type">Design</p>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a class="servicies-item-link link" href="">
+                <img
+                  src="./images/serv-img-8.jpg"
+                  width="360"
+                  height="300"
+                  alt="Organic Food"
+                />
+                <div class="container-servicies">
+                  <h2 class="servicies-title">Organic Food</h2>
+                  <p class="servicies-type">Web Site</p>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a class="servicies-item-link link" href="">
+                <img
+                  src="./images/serv-img-9.jpg"
+                  width="360"
+                  height="300"
+                  alt="Organic Food"
+                />
+                <div class="container-servicies">
+                  <h2 class="servicies-title">Fresh Coffee</h2>
+                  <p class="servicies-type">Web Site</p>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!--footer-->
     <footer class="footer">
-      <a class="footer-logo link" href="./index.html"
-        >Web<span class="footer-logo-part">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <div class="footer-logo-all">
+          <a class="footer-logo link" href="./index.html"
+            >Web<span class="footer-logo-part">Studio</span></a
+          >
+        </div>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
