--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
       <div class="container heaer-container">
         <nav class="header-navigation">
           <div class="header-logo-all">
-            <a class="header-logo link" href="./portfolio.html"
+            <a class="header-logo-white link" href="./portfolio.html"
               >Web<span class="header-logo-part">Studio</span></a
             >
           </div>
