--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
   <body>
     <!--header-->
     <header class="header">
-      <div class="container heaer-container">
+      <div class="container header-container">
         <nav class="header-navigation">
           <div class="header-logo-all">
             <a class="header-logo-white link" href="./portfolio.html"
