--- a/portfolio.html
+++ b/portfolio.html
@@ -105,7 +105,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="servicies-item">
               <a class="servicies-item-link link" href="">
                 <img
                   src="./images/serv-img-2.jpg"
@@ -119,7 +119,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="servicies-item">
               <a class="servicies-item-link link" href="">
                 <img
                   src="./images/serv-img-3.jpg"
@@ -133,7 +133,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="servicies-item">
               <a class="servicies-item-link link" href="">
                 <img
                   src="./images/serv-img-4.jpg"
@@ -147,7 +147,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="servicies-item">
               <a class="servicies-item-link link" href="">
                 <img
                   src="./images/serv-img-5.jpg"
@@ -161,7 +161,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="servicies-item">
               <a class="servicies-item-link link" href="">
                 <img
                   src="./images/serv-img-6.jpg"
@@ -175,7 +175,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="servicies-item">
               <a class="servicies-item-link link" href="">
                 <img
                   src="./images/serv-img-7.jpg"
@@ -189,7 +189,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="servicies-item">
               <a class="servicies-item-link link" href="">
                 <img
                   src="./images/serv-img-8.jpg"
@@ -203,7 +203,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="servicies-item">
               <a class="servicies-item-link link" href="">
                 <img
                   src="./images/serv-img-9.jpg"
