--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
     <!--footer-->
     <footer class="footer">
       <div class="container">
-        <div class=".footer-logo-all">
+        <div class="footer-logo-all">
           <a class="footer-logo link" href="./index.html"
             >Web<span class="footer-logo-part">Studio</span></a
           >
