--- a/portfolio.html
+++ b/portfolio.html
@@ -21,11 +21,9 @@
     <header class="header">
       <div class="container header-container">
         <nav class="header-navigation">
-          <div class="header-logo-all">
-            <a class="header-logo-white link" href="./portfolio.html"
-              >Web<span class="header-logo-part">Studio</span></a
-            >
-          </div>
+          <a class="header-logo link" href="./portfolio.html"
+            >Web<span class="header-logo-part">Studio</span></a
+          >
           <ul class="header-menu-list list">
             <li class="header-menu-item">
               <a
