--- a/index.html
+++ b/index.html
@@ -19,13 +19,11 @@
   <body>
     <!--header-->
     <header class="header">
-      <div class="container header-container">
+      <div class="header-container container">
         <nav class="header-navigation">
-          <div class="header-logo-all">
-            <a class="header-logo-white link" href="./index.html"
-              >Web<span class="header-logo-part">Studio</span></a
-            >
-          </div>
+          <a class="header-logo link" href="./index.html"
+            >Web<span class="header-logo-part">Studio</span></a
+          >
           <ul class="header-menu-list list">
             <li class="header-menu-item">
               <a
