--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
   <body>
     <!--header-->
     <header class="header">
-      <div class="container header-container">
+      <div class="header-container container">
         <nav class="header-navigation">
           <a class="header-logo link" href="./portfolio.html"
             >Web<span class="header-logo-part">Studio</span></a
