--- a/portfolio.html
+++ b/portfolio.html
@@ -222,7 +222,7 @@
     <!--footer-->
     <footer class="footer">
       <div class="container">
-        <a class="footer-logo link" href="./index.html"
+        <a class="footer-logo link" href="./portfolio.html"
           >Web<span class="footer-logo-part">Studio</span></a
         >
         <p class="footer-text">
